public/stylesheets/screen_spotus.css
/* ... */
/* Adjust showgrid to use 960px instead of 950px */
.showgrid {background:url(src/grid.png) 15px -3px;}

/* verride p + p fancy type to not indent the footer-notes paragraph section */
#footer-notes .span-6 p + p, #footer-notes .span-4 p + p, .existing_tips_picthes p + p {
  text-indent: 0;
  margin-top:-1.5em;
  }
/* -----------------------------------------------------------------------
 Spot.us CUSTOM CSS 
----------------------------------------------------------------------- */
body {
  background: #E3EEEF url(../images/spotus_bg.jpg) repeat-x;
  margin-top: 0px;
  margin-bottom: 0px;
  }
.centered {
  text-align: center;
  color: #fff;
  }
.centered_text {
  margin: 0 0 0 35px;
  float: left;
  }
.text-justify {
  text-align: justify;
  }

/* Header & Main Nav Styles */
#header .logo {
  background: url(../images/spotus_header_logo.jpg) no-repeat;
  width: 222px;
  height: 31px;
  overflow: hidden;
  float: left;
  }
#header .logo-link {  
  width: 222px;
  height: 31px;
  display: block;
  }
#header .nav-container {
  float: right;
  background: url(../images/spotus_nav_bg.gif) no-repeat 0 bottom;
  padding: 6px 0 0 0;
  height: 26px;
  width: 506px;
  }
#header .nav-container ul {
  margin: 0;
  padding: 0;
  }
.nav-container #main-nav li {
  float: left;
  list-style: none;
  }
.nav-container #main-nav li a { 
  text-decoration: none;
  display: block;
  text-size: 18px;
  color: #ef4179;
  font-weight: bold;
  }
#main-nav li.start_story, #main-nav li.fund_story, #main-nav li.read_story, #main-nav li.about_spotus  {
  text-align: center;
  }
#main-nav li.start_story {
  width: 118px;
  }
#main-nav li.fund_story {
  width: 153px;
  }
#main-nav li.read_story {  
  width: 150px
  }
#main-nav li.about_spotus {
  margin: 0 0 0 18px;
  width: 67px
  }

/* Content Styles */
.double_footer_border {
  background: url(../images/spotus_footer_title_border.gif) repeat-x 0 bottom;
  }
.double_content_border {
  background: url(../images/spotus_content_title_border.gif) repeat-x 0 bottom;
  }
.double_footer_border, .double_content_border {  
  height: 3px;
  margin: 0 0 10px 0;
  }
.register input.text, .or_login input.text {
  width: 190px!important;
  }
.gray_button {
  background: url(../images/spotus_button_plain_gray.gif) no-repeat 1px 3px;
  width: 111px;
  height: 35px;
  display: block;
  color: #ff0062;
  padding: 0;
  font-size: 18px;
  text-align: center;
  text-decoration: none;
  margin: 0;
  border: 0;
  }
.forgot_password {
  text-transform: uppercase;
  color: #8B9C9F;
  font-size: 9px;
  text-decoration: none;
  margin-right: 3px;
  }
  
/* User Header & Footer Styles */
.pink { color: #ce859d;}
.moss-green { color: #909a9d;}
#user-header .slogan {
  padding: 5px 0 3px 0;
  text-transform: uppercase;
  letter-spacing: .15em;
  float: right;
  }
#user-header ul.user-header-nav {
  padding: 5px 0 3px 0;
  margin: 0;
  color: #ccc;
  float: left;
  }
#footer, .body-content {
  background: url(../images/spotus_shadow_bg.jpg) repeat-y;
  }
#footer div#footer-copyright, #footer div#footer-notes {
  background: #52656B;
  margin: 0 auto;
  padding: 15px;
  color: #ccc;
  width: 930px;
  }
#footer ul.footer-nav, #user-header ul.user-header-nav {
  margin: 0px;
  }
#footer #footer-copyright .footer-nav li, #user-header .user-header-nav li {
  list-style: none;
  display: inline;
  margin: 0 8px 0 0;
  padding: 0 8px 0 0;
  background: url(../images/spotus_pipe.gif) no-repeat top right;
  }
#footer #footer-copyright .footer-nav li.no-pipe, #user-header .user-header-nav li.no-pipe {
  border-right: 0px;
  margin-right: 0;
  padding-right: 0;
  background: url(../images/spotus_no_pipe.gif) no-repeat top right;
  }
#footer a, #user-header a {
  color: #E9EB98;
  text-decoration: none;
  }
#footer .logo-footer {
  background: url(../images/spotus_footer_logo.gif) repeat-y;
  width: 331px;
  height: 100px;
  float: right;
  margin: -18px 105px 0 0;
  }
#footer .logo-footer-link {  
  width: 331px;
  height: 100px;
  display: block;
  }
#footer-notes h3 {
  color: #7d8c90;
  margin: 0 0 10px 0;
  padding: 0;
  }
#footer-notes .span-6 {
  width: 225px;
  margin-right: 30px;
  }
#footer-notes .span-4 {
  width: 165px;
  float: right;
  margin-right: 0;
  }
#footer-notes .span-6 .pledge_another_amount {
  text-transform: uppercase;
  color: #8B9C9F;
  font-size: 9px;
  }
#footer-notes .span-6  a.i_pledge, .create_a_tip_sidebar a.create_pitch {
  background: url(../images/spotus_button_pink.png) no-repeat;
  width: 170px;
  height: 31px;
  padding: 2px 0 0 0;
  display: block;
  color: #fff;
  position: relative;
  font-size: 18px;
  margin: 0 auto;
  }
#footer-notes p img {float:left;margin:0 1em 1em 0;padding:0;}

/* Flash Error Styling */
.error, .success {
  border-color:#FFD324;
  margin-top:15px;
  padding: 10px 15px 15px 65px;
  margin-bottom:1em;
  border-right: 2px #c9c9c9 solid;
  border-bottom: 2px #c9c9c9 solid;
  border-top: 1px #ccc solid;
  border-left: 1px #ccc solid;
  }
  
.success {
  background: #fff url(../images/flash_success_bg.jpg) no-repeat;
  color:#514721;
  }
.success h2 {
  color: #3a9300;
  }
  
.error {
  background: #fff url(../images/flash_error_bg.jpg) no-repeat;
  color: #a70000;
  }
.error h2 {
  color: #a70000;
  }
.error h2, .error p, .error li, .success h2, .success p, .success li {
  margin: 0;
  padding: 0;
  }
.error li, .success li {
  list-style: square;
  }
.error a, .success a {
  text-decoration: none;
  color: #999999;
  }
  
.fieldWithErrors {
  display: inline;
  }
.fieldWithErrors input {
  border: 1px #a70000 solid;
  }
.fieldWithErrors input, .fieldWithErrors label {
  color: #a70000;
  font-weight: bold;
  }
.dismiss {
  float: right;
  }
.dismiss a {
  text-decoration: none;
  height: 22px;
  width: 22px;
  background: url(../images/close_square.png) no-repeat;
  display: block;
  }
/* ... */

